# programming

./: README.md
Tiresias/cs_driver/: CMakeLists.txt  prj.conf
Tiresias/cs_driver/src/: main.c
Tiresias/microphone_read/: CMakeLists.txt  prj.conf
Tiresias/microphone_read/src/: hw_codec.h  main.c
Tiresias/microphone_read/src/drivers/: cs47l63_comm.c  cs47l63_reg_conf.h
Tiresias/nrf5340_audio/: prj.conf
Tiresias/nrf5340_audio/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  compile_commands.json  fw_info_app.c  image_preload.cmake
Tiresias/nrf5340_audio_sd/: CMakeLists.txt  prj.conf  prj_release.conf
c_projects/: data_base.txt  sofia.c
c_projects/c_for_everyone/add2/: a.out  add2.c
c_projects/c_for_everyone/add3/: add3.c
c_projects/c_for_everyone/char_in_c/: char_in_c.c
c_projects/c_for_everyone/circle/: circle.c
c_projects/c_for_everyone/declarations/: declarations.c
c_projects/c_for_everyone/digit_evaluation/: digit_evaluation.c  digit_evaluation_for.c
c_projects/c_for_everyone/fibonacci/: fibonacci.c
python/: main.py  psuedoSensor.py
spi/iCE_programming_AND/: pseudo_main.c
spi/spi_sample/: CMakeLists.txt
verilog/: test.v  test.vvp
vhdl/atividade_17/: README.md  mul.vhd  mul_testbench.vhd  risc_pkg.vhd
vhdl/src/: adder.vhd  alu.vhd  aludec.vhd  controller.vhd  datapath.vhd  dmem.vhd  extend.vhd  flopenr.vhd  flopr.vhd  imem.vhd  maindec.vhd  mux2.vhd  mux3.vhd  regfile.vhd  riscv_pkg.vhd  riscvsingle.vhd  testbench.vhd
vhdl/src_solucoes/: flopr.vhd  fulladder.vhd  mul.vhd  risc_pkg.vhd
(+431 files in other folders)
